# shop

./: Cargo.toml  README.md  askama.toml  build.rs  package-lock.json  package.json  tailwind.config.js
dashboard/assets/: main.css
dashboard/templates/: index.j2
dashboard/templates/bases/: auth.j2  unauth.j2
dashboard/templates/pages/: catalogs.j2  extras.j2  health-check.j2  not-found.j2
dashboard/templates/pages/catalogs/: index.j2  table.j2
migrations/: 20240717181035_create_products_table.sql  20240718121044_create_product_with_extras_view.sql  20240718121603_create_catalog_with_products_view.sql  20240805160634_create_auth_tables.sql  20240805160634_create_user_table.sql
src/: app.rs  infra.rs  main.rs
src/app/: extra.rs
src/app/catalog/: api.rs  dashboard.rs  service.rs  view.rs
src/app/extra/: api.rs  dashboard.rs  service.rs  view.rs
src/app/product/: api.rs  service.rs  view.rs
src/app/user/: api.rs  service.rs
src/domain/: catalog.rs  core.rs  extra.rs  lib.rs  metadata.rs  product.rs  user.rs
src/domain/catalog/: entity.rs  error.rs  repository.rs  variants.rs  vo.rs
src/domain/core/: metadata.rs  string.rs
src/domain/extra/: entity.rs  error.rs  repository.rs  vo.rs
src/domain/product/: entity.rs  error.rs  repository.rs  vo.rs
src/domain/user/: entity.rs  error.rs  password.rs  repository.rs  vo.rs
src/infra/: catalog.rs  extra.rs  product.rs  user.rs
src/infra/catalog/: db.rs  model.rs
src/infra/extra/: db.rs  model.rs
src/infra/product/: db.rs  model.rs
src/infra/user/: db.rs  encrypt.rs  mail.rs  session.rs
(+48 files in other folders)
